--- a/index.html
+++ b/index.html
@@ -48,51 +48,18 @@
     }
     .flip-box {
       background-color: transparent;
-      perspective: 1000px;
       margin-bottom: 60px;
       position: relative;
-    }
-    .flip-box-inner {
-      position: relative;
-      width: 100%;
-      text-align: center;
-      transition: transform 1s;
-      transform-style: preserve-3d;
-      animation: flipY 25s infinite ease-in-out;
-    }
-    @keyframes flipY {
-      0%, 100% { transform: rotateY(0); }
-      50% { transform: rotateY(180deg); }
-    }
-    .flip-box-front,
-    .flip-box-back {
-      position: relative;
-      width: 100%;
-      backface-visibility: hidden;
       border: 1px solid var(--brand-red);
       border-radius: 10px;
       padding: 30px 20px;
       background: var(--dark);
-      color: var(--white);
-      box-sizing: border-box;
     }
-    .flip-box-back {
-      transform: rotateY(180deg);
-      background: var(--brand-red);
-      color: var(--black);
-      font-weight: bold;
-      font-size: 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
     .flip-content {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-
     .price {
       background: var(--brand-red);
       color: var(--black);
@@ -103,8 +70,7 @@
       border-radius: 5px;
       font-size: 1.2rem;
     }
-
-    .flip-box-front ul {
+    .flip-box ul {
       list-style: none;
       padding: 0;
       counter-reset: li;
@@ -112,7 +78,7 @@
       flex-direction: column;
       align-items: center;
     }
-    .flip-box-front li {
+    .flip-box li {
       counter-increment: li;
       text-align: left;
       width: 100%;
@@ -122,14 +88,13 @@
       gap: 10px;
       color: white;
     }
-    .flip-box-front li::before {
+    .flip-box li::before {
       content: counter(li) ".";
       color: var(--brand-red);
       font-weight: bold;
       min-width: 22px;
       text-align: right;
     }
-
     .vip-ribbon {
       position: absolute;
       top: 15px;
@@ -144,7 +109,6 @@
       z-index: 10;
       text-transform: uppercase;
     }
-
     .big-prices {
       position: fixed;
       top: 30%;
@@ -159,7 +123,6 @@
       pointer-events: none;
       user-select: none;
     }
-
     .floating-icons {
       position: fixed;
       bottom: 20px;
@@ -180,12 +143,26 @@
       line-height: 50px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
-
     a.flip-link {
       text-decoration: none;
+      color: inherit;
       display: block;
     }
-
+    .deal-msg {
+      margin-top: 20px;
+      font-size: 1.3rem;
+      font-weight: bold;
+      background: var(--brand-red);
+      color: var(--black);
+      padding: 12px;
+      border-radius: 6px;
+      text-align: center;
+      animation: flash 1.5s infinite;
+    }
+    @keyframes flash {
+      0%, 100% { background-color: var(--brand-red); color: var(--black); }
+      50% { background-color: white; color: var(--brand-red); }
+    }
     footer {
       text-align: center;
       padding: 40px 20px;
@@ -193,7 +170,6 @@
       font-size: 0.9rem;
       color: #777;
     }
-
     @media (max-width: 768px) {
       .big-prices {
         font-size: 3.5rem;
@@ -216,25 +192,21 @@
   <a href="https://wa.me/918432019333?text=I%20want%20to%20book%20Rs599%20Men's%20package" class="flip-link">
     <div class="flip-box">
       <div class="vip-ribbon">GOLD</div>
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <div class="flip-content">
-            <p class="price">Rs. 599</p>
-            <ul>
-              <li>Haircut: Advanced Style</li>
-              <li>Beard: Beardo Oil</li>
-              <li>Hair Nourish: TRESemmé</li>
-              <li>Hair Wash: Schwarzkopf</li>
-              <li>Head Massage: CoolKing</li>
-              <li>Back Massage: By Machine</li>
-              <li>DeTan: Raaga Professionals</li>
-              <li>Nose Pore Purity: Dr. Rashel</li>
-              <li>Facial: Richfeel Professionals</li>
-              <li>Styling Finish: MG5</li>
-            </ul>
-          </div>
-        </div>
-        <div class="flip-box-back">Yes all 10 services just at Rs 599 Book Now</div>
+      <div class="flip-content">
+        <p class="price">Rs. 599</p>
+        <ul>
+          <li>Haircut: Advanced Style</li>
+          <li>Beard: Beardo Oil</li>
+          <li>Hair Nourish: TRESemmé</li>
+          <li>Hair Wash: Schwarzkopf</li>
+          <li>Head Massage: CoolKing</li>
+          <li>Back Massage: By Machine</li>
+          <li>DeTan: Raaga Professionals</li>
+          <li>Nose Pore Purity: Dr. Rashel</li>
+          <li>Facial: Richfeel Professionals</li>
+          <li>Styling Finish: MG5</li>
+        </ul>
+        <div class="deal-msg">Yes all 10 services just at Rs 599 Book Now</div>
       </div>
     </div>
   </a>
@@ -246,22 +218,18 @@
   <a href="https://wa.me/918432019333?text=I%20want%20to%20book%20Rs799%20Women's%20package" class="flip-link">
     <div class="flip-box">
       <div class="vip-ribbon">GOLD</div>
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <div class="flip-content">
-            <p class="price">Rs. 799</p>
-            <ul>
-              <li>Haircut & Blow-dry</li>
-              <li>Hair Wash & Conditioning</li>
-              <li>Manicure</li>
-              <li>Pedicure</li>
-              <li>Basic Facial (glowing skin)</li>
-              <li>Threading (Eyebrows & Lip)</li>
-              <li>Hair Setting</li>
-            </ul>
-          </div>
-        </div>
-        <div class="flip-box-back">Yes all 7 services just at Rs 799 Book Now</div>
+      <div class="flip-content">
+        <p class="price">Rs. 799</p>
+        <ul>
+          <li>Haircut & Blow-dry</li>
+          <li>Hair Wash & Conditioning</li>
+          <li>Manicure</li>
+          <li>Pedicure</li>
+          <li>Basic Facial (glowing skin)</li>
+          <li>Threading (Eyebrows & Lip)</li>
+          <li>Hair Setting</li>
+        </ul>
+        <div class="deal-msg">Yes all 7 services just at Rs 799 Book Now</div>
       </div>
     </div>
   </a>
@@ -269,23 +237,19 @@
   <a href="https://wa.me/918432019333?text=I%20want%20to%20book%20Rs999%20Women's%20package" class="flip-link">
     <div class="flip-box">
       <div class="vip-ribbon">GOLD</div>
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <div class="flip-content">
-            <p class="price">Rs. 999</p>
-            <ul>
-              <li>Haircut & Styling</li>
-              <li>Hair Spa Treatment</li>
-              <li>Manicure & Pedicure (Scrub + Mask)</li>
-              <li>Deep Cleansing Facial</li>
-              <li>Body Waxing (Hands & Legs)</li>
-              <li>D-tan (Face & Neck)</li>
-              <li>Threading (Full Face)</li>
-              <li>Head & Shoulder Massage</li>
-            </ul>
-          </div>
-        </div>
-        <div class="flip-box-back">Yes all 8 services just at Rs 999 Book Now</div>
+      <div class="flip-content">
+        <p class="price">Rs. 999</p>
+        <ul>
+          <li>Haircut & Styling</li>
+          <li>Hair Spa Treatment</li>
+          <li>Manicure & Pedicure (Scrub + Mask)</li>
+          <li>Deep Cleansing Facial</li>
+          <li>Body Waxing (Hands & Legs)</li>
+          <li>D-tan (Face & Neck)</li>
+          <li>Threading (Full Face)</li>
+          <li>Head & Shoulder Massage</li>
+        </ul>
+        <div class="deal-msg">Yes all 8 services just at Rs 999 Book Now</div>
       </div>
     </div>
   </a>
@@ -293,24 +257,20 @@
   <a href="https://wa.me/918432019333?text=I%20want%20to%20book%20Rs3999%20Women's%20package" class="flip-link">
     <div class="flip-box">
       <div class="vip-ribbon">GOLD</div>
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <div class="flip-content">
-            <p class="price">Rs. 3999</p>
-            <ul>
-              <li>Haircut & Styling</li>
-              <li>Keratin / Smoothening / Highlights</li>
-              <li>Mani-Pedi (Scrub, Mask, Paraffin)</li>
-              <li>Luxury Facial (Anti-aging)</li>
-              <li>Full Body Waxing</li>
-              <li>Full Body Polishing</li>
-              <li>D-tan (Full Body)</li>
-              <li>Advanced Threading (Full Face)</li>
-              <li>Full Body Massage</li>
-            </ul>
-          </div>
-        </div>
-        <div class="flip-box-back">Yes all 9 services just at Rs 3999 Book Now</div>
+      <div class="flip-content">
+        <p class="price">Rs. 3999</p>
+        <ul>
+          <li>Haircut & Styling</li>
+          <li>Keratin / Smoothening / Highlights</li>
+          <li>Mani-Pedi (Scrub, Mask, Paraffin)</li>
+          <li>Luxury Facial (Anti-aging)</li>
+          <li>Full Body Waxing</li>
+          <li>Full Body Polishing</li>
+          <li>D-tan (Full Body)</li>
+          <li>Advanced Threading (Full Face)</li>
+          <li>Full Body Massage</li>
+        </ul>
+        <div class="deal-msg">Yes all 9 services just at Rs 3999 Book Now</div>
       </div>
     </div>
   </a>
